# InSeis

./: .bumpversion.cfg  .gitignore  README.md  binary  header  pyproject.toml
.tmp.driveupload/: 142428  142440  142448  142452  142464  142472  142476  142482  142490  142498  142504  142512  142516  142520  142524  142528  142540  142556  142562  142582  142586  142594  142598  142602  142626  142630  142642  142680  142698  142714  142730  142738  142748  142754  142762  142806  142828  142852  142862  142866  (+2779 more)
src/inseis/: __init__.py  __main__.py
src/inseis/config/: __init__.py  settings.py
src/inseis/core/: __init__.py  process_manager.py  workflow_manager.py
src/inseis/data/: __init__.py
src/inseis/data/process_definitions/: basic_processes.json  segyclean.json  segyread.json  suacor.json  suaddnoise.json  subfilt.json  sucat.json  sufilter.json  sufrac.json  sufxdecon.json  sugain.json  sugazmigq.json  suinterp.json  sukdmig2d.json  suktmig2d.json  sumedian.json  sumigfd.json  sumigffd.json  sumiggbzo.json  sumigps.json  sumix.json  sunormalize.json  suop2.json  supef.json  suradon.json  sustolt.json  sutaup.json  suttoz.json  sutvband.json
src/inseis/ui/: README-ui.md  __init__.py  dialogs.py  help_dialogs.py  main_window.py  panels.py  parameters_panel.py  process_panel.py  theme.qss  visualization.py  workflow_controller.py  workflow_panel.py
src/inseis/utils/: __init__.py  console.py  path_handler.py  path_manager.py  path_utils.py  resources.py  result.py
tests/: README-tests.md  cleanup.py  run_InSeis.py  test_wsl.py
