[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inseis"
version = "1.2.1"
authors = [
    {name = "Alejandro Pertuz", email = "apertuz@ucm.es"},
]
description = "A GUI application for creating and running Seismic Unix workflows"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "PySide6>=6.8",
    "appdirs>=1.4.4",
    "matplotlib>=3.7.0",
    "seisio>=1.2.0",
    "seisplot>=1.2.0",
    "setuptools>=65.0.0"
]

[project.urls]
"Homepage" = "https://github.com/a-pertuz/inseis"
"Bug Tracker" = "https://github.com/a-pertuz/inseis/issues"

[project.scripts]
inseis = "inseis.__main__:main"

[tool.setuptools]
packages = ["inseis", "inseis.ui", "inseis.core", 
            "inseis.utils", "inseis.data", "inseis.config",
            "inseis.data.process_definitions"]
package-dir = {"" = "src"}
include-package-data = true


[tool.setuptools.package-data]
"inseis" = [
    "data/**/*",
    "examples/SEGY/*.*", 
    "data/process_definitions/*.*",
    "data/workflow_examples/*.*"
]
