[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inseis"
version = "1.0.0"
authors = [
    {name = "Alejandro Pertuz", email = "apertuz@ucm.es"},
]
description = "A GUI application for creating and running Seismic Unix workflows"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows"
]
keywords = ["seismic", "processing", "segy", "geophysics", "seismic unix"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Geophysics",
]
dependencies = [
    "PySide6>=6.8",
    "appdirs>=1.4.4",
    "matplotlib>=3.7.0",
    "seisio>=1.2.0",
    "seisplot>=1.2.0",
    "setuptools>=65.0.0"
]

[project.urls]
"Documentation" = "https://a-pertuz.github.io/REVSEIS/index.html"
"Source Code" = "https://github.com/a-pertuz/InSeis"
"DOI" = "https://doi.org/10.5281/zenodo.15053545"

[project.scripts]
inseis = "inseis.__main__:main"

[tool.setuptools]
packages = ["inseis", "inseis.ui", "inseis.core", 
            "inseis.utils", "inseis.data", "inseis.config",
            "inseis.data.process_definitions"]
package-dir = {"" = "src"}
include-package-data = true


[tool.setuptools.package-data]
"inseis" = [
    "data/**/*",
    "data/process_definitions/*.*",
    "data/workflow_examples/*.*",
    "ui/theme.qss"
]
